@@ -7,6 +7,7 @@
 - Deprecate TimedStat and introduce TimeStat
 - Add ConfigurationAwareProvider interface to implement custom
   configuration providers
+- Roll and compress the http request log daily
 
 * 0.78
 
